syntax = "proto3";

package app_service;


service AppService {
    rpc CreateApp(CreateAppRequest) returns (CreateAppResponse) {}
    rpc DeleteApp(DeleteAppRequest) returns (DeleteAppResponse) {}

    rpc GetAppList(GetAppListRequest) returns (GetAppListResponse) {}
    rpc GetApp(GetAppRequest) returns (GetAppResponse) {}

    rpc AddMember(AddMemberRequest) returns (AddMemberResponse) {}
    rpc RemoveMember(RemoveMemberRequest) returns (RemoveMemberResponse) {}
}


// RPC CREATE APP
message CreateAppRequest {
    string tracing_ID = 1;
    string owner_uuid = 2;
    string name = 3;
    string organization = 4;
    string description = 5;
    repeated string member = 6;
    repeated string settings = 7;
}
message CreateAppResponse {
    int32 status_code = 1;
    string msg = 2;
    string app_uuid = 3;
}
// ***************************

// RPC DELETE APP
message DeleteAppRequest {
    string tracing_ID = 1;
    string app_uuid = 2;
    string caller_uuid = 3;
}

message DeleteAppResponse {
    int32 status_code = 1;
    string msg = 2;
}
// ***************************

// RPC GET APP LIST
message GetAppListRequest {
    string tracing_ID = 1;
    string caller_uuid = 2;
}
message GetAppListResponse {
    int32 status_code = 1;
    string msg = 2;
    repeated SimpleApp app_list = 3;
}
// ***************************

// RPC GET APP
message GetAppRequest {
    string tracing_ID = 1;
    string app_uuid = 2;
    string caller_uuid = 3;
}

message GetAppResponse {
    int32 status_code = 1;
    string msg = 2;
    ComplexApp app = 3;
}
// ***************************

// RPC ADD MEMBER
message AddMemberRequest {
    string tracing_ID = 1;
    string app_uuid = 2;
    string caller_uuid = 3;
    repeated string member = 4;
}
message AddMemberResponse {
    int32 status_code = 1;
    string msg = 2;
}
// ***************************

// RPC REMOVE MEMBER
message RemoveMemberRequest {
    string tracing_ID = 1;
    string app_uuid = 2;
    string caller_uuid = 3;
    string member_uuid = 4;
}
message RemoveMemberResponse {
    int32 status_code = 1;
    string msg = 2;
}
// ***************************






// common types
message ComplexApp {
    string name = 1;
    string description = 2;
    ComplexUser owner = 3;
    repeated ComplexUser member = 4;
    repeated string settings = 5;
    string app_token = 6;
}

message SimpleApp {
    string name = 1;
    string uuid = 2;
}

message ComplexUser {
    string uuid = 1;
    string username = 2;
    string first_name = 3;
    string last_name = 4;
    string orgn_domain = 5;
    string orgn_position = 6;
    string profile_img_url = 7;
}

message SimpleUser {
    string uuid = 1;
}


